small changes - problem with background-attachment: fixed on IOS

--- a/src/sass/utilities/_header.scss
+++ b/src/sass/utilities/_header.scss
@@ -5,7 +5,6 @@
 	height: 100vh;
 	@include heroImg('../../../dist/img/hero-img.jpg');
     background-position: top;
-    background-attachment: fixed;
 	overflow: hidden;
 
 	&__shadow {
@@ -31,7 +30,16 @@
 		grid-row: 5/6;
 		align-content: flex-end;
 		text-transform: uppercase;
-		font-family: "Junge", cursive;
+		// font-family: "Junge", cursive;
+		
+		// font-family: "Playfair Display", serif;
+		// font-family: "Varela Round", sans-serif;
+		font-family: "Montserrat", sans-serif;
+
+		// font-family: "Raleway", sans-serif;
+
+
+
 		font-weight: 400;
 		font-style: normal;
 		font-size: 3rem;
@@ -69,6 +77,8 @@
 
 @media (width >= 992px) {
 	.hero-img {
+		background-attachment: fixed;
+
 		&__header {
 			font-size: 3.5rem;
 		}
